syntax = "proto3";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/DIMO-Network/device-definitions-api/pkg/grpc";

package grpc;

message RecallItem {
  string device_definition_id = 1;
  string name = 2;
  int32 year = 3;
  string description = 4;
  google.protobuf.Timestamp date = 5;
}

message GetRecallsByMakeRequest {
  string make_id = 1;
}

message GetRecallsByModelRequest {
  string model = 1;
}

message GetRecallsResponse {
  repeated RecallItem recalls = 1;
}

service RecallsService {
  rpc GetRecallsByMake(GetRecallsByMakeRequest) returns (GetRecallsResponse);
  rpc GetRecallsByModel(GetRecallsByModelRequest) returns (GetRecallsResponse);
}